--- a/index.css
+++ b/index.css
@@ -1,3 +1,49 @@
-#heading{
-    color: red
+.header{
+    display:flex;
+    justify-content:space-between;
+    align-items: center;
+    border:1px solid black;
+    background-color:  #f0f0f0;
+}
+
+.nav-items ul {
+    display:flex;
+    list-style: none;
+    font-size: 24px;
+    color: rgb(175, 175, 2);
+}
+
+.nav-items ul li{
+    margin:10px;
+    padding:10px;
+}
+
+.logo{
+    width:200px;
+}
+
+.res-card{
+    width:200px;
+    padding:5px;
+    border-radius: 10px;
+    margin:10px;
+}
+.res-card:hover{
+    border:1px solid black;
+    cursor: pointer;
+}
+
+.res-logo{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly
+}
+
+.search{
+    padding: 10px;
 }
