--- a/index.css
+++ b/index.css
@@ -1,49 +1,74 @@
-.header{
-    display:flex;
-    justify-content:space-between;
-    align-items: center;
-    border:1px solid black;
-    background-color:  #f0f0f0;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black
 }
 
-.nav-items ul {
-    display:flex;
-    list-style: none;
+.logo {
+    width: 200px;
+}
+
+.nav-items {
+    padding:  0px 20px;
+}
+
+.nav-items > ul {
     font-size: 24px;
-    color: rgb(175, 175, 2);
+    display: flex;
+    list-style-type: none;
 }
 
-.nav-items ul li{
-    margin:10px;
-    padding:10px;
+.nav-items > ul > li {
+    padding: 10px;
+    margin: 10px
 }
 
-.logo{
-    width:200px;
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.res-card{
-    width:200px;
-    padding:5px;
-    border-radius: 10px;
-    margin:10px;
+.res-card {
+    margin: 5px;
+    padding: 5px;
+    width: 200px;
 }
-.res-card:hover{
-    border:1px solid black;
+
+.res-card:hover {
+    cursor: pointer;
+    border: 1px solid black;
+}
+
+.search {
+    padding: 10px
+}
+
+.res-logo {
+    width: 100%;
+}
+
+.filter-btn {
+ margin: 10px;
+ cursor: pointer;
+}
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    margin: 20px;
+    width: 200px;
+    height: 400px;
+    background-color: #f0f0f0
+}
+
+.login {
+    padding: 0 20px;
     cursor: pointer;
 }
 
-.res-logo{
-    width: 100%;
-    border-radius: 10px;
-}
-
-.res-container{
+.filter {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly
-}
-
-.search{
-    padding: 10px;
 }
